# cu_intercept

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: linux.yml
src/: alloc_map.cpp  alloc_map.hpp  backtrace.cpp  backtrace.hpp  cuda_hook.cpp  cuda_hook.hpp  dlsym_hook.cpp  dlsym_hook.hpp  hook_malloc.hpp  lib.cpp  lib_old.cu  time.hpp
test/: test.cu
